[project]
name = "volleypy"
version = "0.0.1"
authors = [
    {name = "Szymon Kublin"},
    {email="skublin.developer@gmail.com"},
]
description = "Tool to gather information from Volleyball match."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://skublin.me/"
"Source Code" = "https://github.com/skublin/volleypy"
"Issues" = "https://github.com/skublin/volleypy/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
